Fix NONE NWS ID Links, visible min-ft on mobile

--- a/src/styles/less/floodtools.less
+++ b/src/styles/less/floodtools.less
@@ -1080,7 +1080,7 @@
                     &.label-ft:after{content:'ft';}
                 }
 
-                a.value{
+                a{
                     color: @blue;
 
                     &:hover{
